--- a/notebooks/day02/puzzle_0_PoC.ipynb
+++ b/notebooks/day02/puzzle_0_PoC.ipynb
@@ -4,6 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day02/puzzle_0_PoC.ipynb)\n",
+        "\n",
+        "\n",
         "Make corresponding functions just print message"
       ]
     },
