--- a/notebooks/day02/puzzle_0_PoC.ipynb
+++ b/notebooks/day02/puzzle_0_PoC.ipynb
@@ -6,6 +6,16 @@
       "source": [
         "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day02/puzzle_0_PoC.ipynb)\n",
         "\n",
+        "Actually, the input can be a valid F# code.\n",
+        "```fsharp\n",
+        "forward 5\n",
+        "down 5\n",
+        "forward 8\n",
+        "up 3\n",
+        "down 8\n",
+        "forward 2\n",
+        "```\n",
+        "All we have to do is save the input as fsx file, define corresponding function and then load the input so that it will execute.\n",
         "\n",
         "Make corresponding functions just print message"
       ]
